# test

./: README.md
flash-linear-attention/: .gitignore  extract_unreachable_from_all_gdn_related.txt  extract_unreachable_from_gdn_seeds.txt  fix_missing_modules_log.txt  gdn_related_missing_in_extract.txt  gdn_related_source_files.txt
flash-linear-attention/benchmarks/ops/: benchmark_rwkv7_k_update.py
flash-linear-attention/fla/layers/: abc.py  comba.py  delta_net.py  gated_deltanet.py  gla.py  gsa.py  hgrn.py  hgrn2.py  lightnet.py  linear_attn.py  log_linear_mamba2.py  mamba.py  mamba2.py  mesa_net.py  multiscale_retention.py  rodimus.py  rwkv6.py  (+3 more)
flash-linear-attention/gated_deltanet_extract/: ADDED_IMPORT_DEPS.txt  INDEX.md  MANIFEST.txt  SEED_FILES.txt
qwen3.5-triton/: .gitignore  OPTIMIZATION_LOG.md  README.md  benchmark_compare_fla_recurrent.py  modal_config.py  pyproject.toml  requirements.txt  run_on_modal.py  run_recurrent_decode.py
qwen3.5-triton/benchmarks/: baseline.py  baseline_inductor.py  baseline_vllm.py  batch_benchmark.py  inspect_model.py  optimized.py  profile_nsight.py  v4_validate.py
qwen3.5-triton/forge/: __init__.py
qwen3.5-triton/forge/kernels/: __init__.py  triton_bf16_gemv.py  triton_causal_conv1d.py  triton_deltanet_fused.py  triton_deltanet_prep.py  triton_deltanet_recurrent.py  triton_fused_qknorm_rope.py  triton_fused_qkv_rope.py  triton_fused_residual_norm.py  triton_lm_head_topk.py  triton_rmsnorm.py  triton_rmsnorm_gated.py  triton_silu_mlp.py
qwen3.5-triton/forge/llm/: __init__.py  cache.py  generate.py  patch_qwen35.py
(+83 files in other folders)
