[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qwen35-triton-kernels"
version = "0.1.0"
description = "Pure Triton kernels for Qwen3.5-27B inference on NVIDIA B200"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "triton>=3.1.0",
    "transformers>=4.57.0",
    "accelerate>=0.25.0",
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
benchmark = [
    "modal>=0.70.0",
]

[tool.setuptools.packages.find]
include = ["forge*"]
